<resources>
    <string name="app_name">Android application on Java</string>
    <string name="choosing_city_name">Choose city</string>
    <string name="weather">Weather</string>
    <string name="settings">Settings</string>
    <string name="weather_history">Weather history</string>
    <string name="enter_city">Enter city</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="show_weather_button">Show weather</string>
    <string name="settings_button">Settings</string>
    <string name="show_weather_on_internet">Show weather on Internet</string>
    <string name="night_theme">Night theme</string>
    <string name="localization_text">Language:</string>
    <string name="localisation_eng">English</string>
    <string name="localisation_rus">Russian</string>
    <string name="weather_parameter_text">Weather parameter:</string>
    <string name="weather_at_celsius">Celsius</string>
    <string name="weather_at_kelvin">Kelvin</string>
    <string name="weather_at_fahrenheit">Fahrenheit</string>
    <string name="back_button">Back</string>
    <string name="clear_cities_data">Clear cities data</string>
    <string name="clear_weather_history_data">Clear weather history data</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="header_title">Navigation Drawer menu</string>
    <string name="alert_dialog_title">WARNING</string>
    <string name="internet_error">No Internet connection</string>
    <string name="cancel_dialog_button">Cancel</string>
    <string name="go_to_internet_settings">Go to Internet settings</string>
    <string name="server_error">No connection to server\nError: </string>
    <string name="show_default">Show default weather</string>
    <string name="temperature_with_parameter" translatable="false">%1$.2f%2$s</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_city">Sort by city</string>
    <string name="sort_by_temperature">Sort by temperature</string>
    <string name="connected_to_internet_alert">Connected to Internet</string>
    <string name="low_battery_alert">Low battery</string>
    <string name="web_client_id" translatable="false">900044642955-35ebqklai61o6sjscae0p9bv4j4akqhf.apps.googleusercontent.com</string>
    <string name="header_sign_out_button">Sign out</string>
</resources>