<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_port"
    app:startDestination="@id/choosingCityFragment">

    <fragment
        android:id="@+id/choosingCityFragment"
        android:name="com.gb.androidapponjava.view.ChoosingCityFragment"
        android:label="@string/choosing_city_name"
        tools:layout="@layout/fragment_choose_city" >
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.gb.androidapponjava.view.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" >
    </fragment>
    <fragment
        android:id="@+id/weatherHistoryFragment"
        android:name="com.gb.androidapponjava.view.WeatherHistoryFragment"
        android:label="@string/weather_history"
        tools:layout="@layout/fragment_weather_history" >
    </fragment>
    <fragment
        android:id="@+id/showWeatherFragment"
        android:name="com.gb.androidapponjava.view.ShowWeatherFragment"
        android:label="@string/weather"
        tools:layout="@layout/fragment_weather">
    </fragment>

</navigation>